--- a/style.css
+++ b/style.css
@@ -138,7 +138,8 @@ strong {
 	max-width: 700px;
 	width: 100%;
 }
-.post-image {
+.post-image,
+.blog-image {
 	border: 1px solid #ccc;
 	box-shadow: 1px 1px 4px #ccc;
 	display: table;
